# HPGS

./: .gitignore  CMakeLists.txt  E_k.csv  README.md  export_lpips.py  package.xml
app/: CMakeLists.txt
app/include/: config.hpp  gui.hpp  listener.hpp  reader_base.hpp  reader_replica.hpp  reader_scannetpp.hpp  reader_tum.hpp
app/src/: config.cpp  eval.cpp  gui.cpp  listener.cpp  main.cpp  reader_base.cpp  reader_replica.cpp  reader_scannetpp.cpp  reader_tum.cpp
config/: replica_room0.yaml  scannetpp_8b5caf3398.yaml  tum_rgbd_freiburg1_desk.yaml  tum_rgbd_freiburg1_desk2.yaml  tum_rgbd_freiburg1_xyz.yaml  tum_rgbd_freiburg2_desk copy.yaml  tum_rgbd_freiburg2_desk.yaml
config/ros2_config/: cvsl_ros2.yaml
cuda_rasterizer/include/: backward.h  config.h  forward.h  rasterizer.h
cuda_rasterizer/src/: backward.cu  forward.cu  rasterizer_impl.cu
include/gs/: eval_utils.cuh  gaussian.cuh  quad_tree.cuh  rasterize_points.cuh  rasterizer.cuh  render_utils.cuh
include/se/integrator/: map_integrator.hpp
include/se/integrator/impl/: map_integrator_impl.hpp
include/se/integrator/updater/: singleres_tsdf_gs_updater.hpp  updater.hpp
include/se/integrator/updater/impl/: singleres_tsdf_gs_updater_impl.hpp
install/: local_setup.sh  setup.sh
install/HPGS/share/HPGS/: package.bash  package.zsh
log/: latest_build
parameter/: optimization_params_replica.json  optimization_params_scannetpp.json  optimization_params_tum_rgbd.json
src/gs/: gaussian.cu  quad_tree.cu  rasterize_points.cu  rasterizer.cu
